# dotfile

./: .gitignore  Cargo.toml  TODO.md  pac.toml  rustfmt.toml  specs.md
src/: dir.rs  lib.rs  main.rs  pac.rs
src/pac/: cli.rs  package_manager.rs  package_system.rs  parser.rs  tests.rs
src/pac/package_manager/: tests.rs
src/pac/package_manager/files/: invalid.toml  mock.toml
src/pac/package_system/: tests.rs
src/pac/package_system/test_package_system/: package_manager.toml
templates/: package_manager.toml
test_files/pac/create_package_system/correct/: package_manager.toml
test_files/pac/package_manager/add_package_manager/: first_entry.toml  package_managers.toml
test_files/pac/package_system/install_upload/: installed_packages.txt
test_files/pac/package_system/read/exists/: excluded-packages.txt
test_files/pac/package_system/upload/: excluded_packages.txt  package_manager.toml
test_files/pac/parser/: basic.toml  duplicate.toml
test_files/pac/parser/package_managers/pacman/: package_manager.toml
test_files/pac/parser/package_managers/yay/: package_manager.toml
test_files/pac/parser/test_package_systems/yay/: package_manager.toml
test_utils/: Cargo.toml
test_utils/src/: lib.rs  packages.rs  path.rs
tests/: pac.rs
utils/src/: contains.rs  file.rs  lib.rs  vec.rs
utils/src/file/: tests.rs
utils/src/vec/: test_file.txt  tests.rs
