[package]
name = "dotfile"
version = "0.1.0"
edition = "2024"
description = "Back up your whole computer!"

[dependencies]
minijinja = "*"
toml = "*"
serde = "*"
serde_derive = "*"
itertools = "*"
rstest = "*"
utils = { path = "./utils" }
dirs = "*"
clap = { version = "*", features = ["derive"] }

[dev-dependencies]
test_utils = { path = "./test_utils" }
